
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(util)

IF (BUILD_PROVIDER)
  ADD_SUBDIRECTORY(providers)
ENDIF (BUILD_PROVIDER)

IF (BUILD_CONSUMER)
  ADD_SUBDIRECTORY(consumers)
ENDIF (BUILD_CONSUMER)

IF (BUILD_API_DOC)
  FIND_PACKAGE(Doxygen)
  IF (DOXYGEN_FOUND)
    ADD_SUBDIRECTORY(doxy)
  ENDIF (DOXYGEN_FOUND)
ENDIF (BUILD_API_DOC)
