IF (NOT BUILD_RTEMS)
  IF (NOT WIN32)
    ADD_SUBDIRECTORY(bb_provider)
    ADD_SUBDIRECTORY(generic_reader)
    ADD_SUBDIRECTORY(res_reader)
    IF (DUF_FIXME)
      ADD_SUBDIRECTORY(rt_stub)
    ENDIF (DUF_FIXME)
  ENDIF (NOT WIN32)
  
  ADD_SUBDIRECTORY(stub)
  
  IF (NOT WIN32)
    ADD_SUBDIRECTORY(vxstub)
  ENDIF (NOT WIN32)
ENDIF (NOT BUILD_RTEMS)
