
IF (XML2_FOUND AND NOT WIN32)
  ADD_SUBDIRECTORY(libpages)
  ADD_SUBDIRECTORY(libtspcfg)
ENDIF (XML2_FOUND AND NOT WIN32)

# AP : Migration sous Windows
IF (NOT WIN32)
	ADD_SUBDIRECTORY(libutil)
	ADD_SUBDIRECTORY(libres)
ENDIF (NOT WIN32)

ADD_SUBDIRECTORY(libcalc)

# AP : Migration sous Windows
IF (NOT WIN32)
	ADD_SUBDIRECTORY(libbb)
ENDIF (NOT WIN32)
