
IF (XML2_FOUND AND NOT WIN32 AND NOT BUILD_RTEMS)
  ADD_SUBDIRECTORY(libpages)
  ADD_SUBDIRECTORY(libtspcfg)
ENDIF (XML2_FOUND AND NOT WIN32 AND NOT BUILD_RTEMS)

IF (NOT WIN32 AND NOT BUILD_RTEMS)
  ADD_SUBDIRECTORY(libutil)
  ADD_SUBDIRECTORY(libres)
ENDIF (NOT WIN32 AND NOT BUILD_RTEMS)

ADD_SUBDIRECTORY(libcalc)

IF (NOT WIN32)
  ADD_SUBDIRECTORY(libbb)
ENDIF (NOT WIN32)
